--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,24 @@ baseURL = 'https://milsab.github.io/'
 languageCode = 'en-us'
 title = 'Milad Sabouri'
 theme = "PaperMod"
+
+[menu]
+  [[menu.main]]
+    name = "About"
+    url  = "#about"
+    weight = 1
+  [[menu.main]]
+    name = "Projects"
+    url  = "#projects"
+    weight = 2
+  [[menu.main]]
+    name = "Publications"
+    url  = "#publications"
+    weight = 3
+  [[menu.main]]
+    name = "Resume"
+    url  = "#resume"
+    weight = 4
+
+[params]
+  defaultTheme = "auto"
