--- a/hugo.toml
+++ b/hugo.toml
@@ -23,3 +23,11 @@ theme = "PaperMod"
 
 [params]
   defaultTheme = "auto"
+
+[[params.socialIcons]]
+  name = "github"
+  url = "https://github.com/milsab"
+
+[[params.socialIcons]]
+  name = "linkedin"
+  url = "https://linkedin.com/in/milad-sabouri"
